--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda Los Pendejos</title>
+    <title>Tienda KJ - Calidad y los mejores precios</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
                         <circle cx="67" cy="33" r="1" fill="#8a2be2" class="pulse"/>
                         <circle cx="33" cy="60" r="1" fill="#00d4ff" class="pulse"/>
                     </svg>
-                    <span>Los Pendejos</span>
+                    <span>Tienda KJ</span>
                 </a>
             </div>
             <ul class="nav-links" id="navLinks">
@@ -137,8 +137,8 @@
     </svg>
 
     <section class="hero" id="tienda">
-        <h1>Bienvenido a Tienda Los Pendejos</h1>
-        <p>Descubre nuestros productos exclusivos con la mejor calidad y atención personalizada</p>
+        <h1>Bienvenido a Tienda KJ</h1>
+        <p>Calidad, estilo y los mejores precios en un solo lugar</p>
     </section>
 
     <section class="productos" id="productos">
@@ -172,7 +172,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Tienda Los Pendejos. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Tienda KJ. Todos los derechos reservados.</p>
     </footer>
 
     <a href="https://wa.me/593963426407?text=Hola,%20necesito%20información" class="whatsapp-btn" target="_blank" title="Chatea con nosotros">💬</a>
